--- a/style.css
+++ b/style.css
@@ -84,6 +84,9 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+body {
+   background: #000;
+}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
